# spritegenerator

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.cmake  Info.plist  README.md  spritegenerator.desktop  version.h.cmake
src/: CMakeLists.txt  cssspriteelementdescription.cpp  cssspriteelementdescription.h  cssspriteelementimage.cpp  cssspriteelementimage.h  cssspriteelementimagelist.cpp  cssspriteelementimagelist.h  main.cpp  previewpage.cpp  previewpage.h  spritewidget.cpp  spritewidget.h  ui_infoDialog.h  ui_mainwindow.h
src/resources/: resources.qrc  spritegeneratoricon.rc
src/resources/images/: spritegenerator.icns
src/ui/: filesystemtreewidget.cpp  filesystemtreewidget.h  infoDialog.ui  infodialog.cpp  infodialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  spriteFormatSelector.ui  spriteQualitySelector.ui  spriteelementlistwidget.cpp  spriteelementlistwidget.h  spriteelementtreewidget.cpp  spriteelementtreewidget.h  spriteformattoolbar.cpp  spriteformattoolbar.h  spritequalitytoolbar.cpp  spritequalitytoolbar.h
tests/: CMakeLists.txt  main.cpp  previewpagetest.cpp  previewpagetest.h
tests/ui/: mainwindowtest.cpp  mainwindowtest.h  spriteelementlistwidgettest.cpp  spriteelementlistwidgettest.h  spriteelementtreewidgettest.cpp  spriteelementtreewidgettest.h  spriteformattoolbartest.cpp  spriteformattoolbartest.h  spritequalitytoolbartest.cpp  spritequalitytoolbartest.h
